--- a/src/app/privacy-policy/PrivacyPolicy.module.css
+++ b/src/app/privacy-policy/PrivacyPolicy.module.css
@@ -36,6 +36,9 @@
 
 .logo {
   object-fit: contain;
+  width: auto;
+  height: auto;
+  max-width: 100%;
 }
 
 .title {
